[FIX] Java 21 문법 삭제